--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts", 
-    "src/pages/api/auth/[...nextauth].ts"  
+    "src/pages/api/auth/[...nextauth]/route.ts"  
   ],
   "exclude": [
     "node_modules"
